Fix issue with Services text covered on Mobile

--- a/src/app/components/pages/services/services.component.css
+++ b/src/app/components/pages/services/services.component.css
@@ -30,6 +30,9 @@
     display: block;
     margin: 0;
   }
+  .services__container {
+    margin-bottom: 5rem;
+  }
 }
 
 /* Responsive High Res */
